# recipes

./: .clang-format  .clang-tidy  .gitignore  Dockerfile  xmake.lua
crypto/: README.md
crypto/sample/: aes_crypto.cpp  xmake.lua
crypto/ssl_demo/: xmake.lua
crypto/ssl_demo/src/: ssl_client.cpp  ssl_session.cpp  ssl_session.hpp
data/: README.md
file/: README
llm/: README.md
llm/ollama/: README.md
llm/ollama/deepseek/: Dockerfile  benchmark.py
log/: README.md
net/: README.md  net_address.cpp  net_address.h  socket.cpp  socket.h  socket_ops.cpp  socket_ops.h  xmake.lua
test/: timer_wheel_test.cpp  xmake.lua
thread/: README.md  thread_pool.h
thread/container/: README.md
thread/thread_pool/: CMakeLists.txt  example.cpp  thread_pool.h
thread/worker/: README.md
tools/: generate_vscode.py  tls_verify.py
tools/fordir/: Cargo.toml  README.md
tools/fordir/src/: lib.rs  main.rs
tools/fordir/tests/: core.rs
tools/tests/: test_tls_verify.py
toy/: README.md  dns.py  hostname_validation.py
utils/: async_result.h  atomic_refcnt.h  buffer_view.h  construct_utils.h  defer.h  enum.h  macros.h  maybe.h  stl_utils.h  sync_event.cpp  sync_event.h  time.cc  time.h  timer_wheel.cpp  timer_wheel.h  xmake.lua
